objects/Hedge_Fund_Party__c.object
<CustomObject>
    <fields>
        <fullName>Deal_Party__c</fullName>
        <label>Deal Party</label>
        <referenceTo>Deal_Party__c</referenceTo>
        <relationshipLabel>Hedge Fund Parties</relationshipLabel>
        <relationshipName>Hedge_Fund_Parties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hedge_Fund_Party_Type__c</fullName>
        <label>Hedge Fund Party Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Investment Manager</fullName>
                </value>
                <value>
                    <fullName>Fund Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hedge_Fund_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hedge Fund Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Hedge Fund Parties</relationshipLabel>
        <relationshipName>Hedge_Fund_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Hedge Fund Party</label>
    <nameField>
        <displayFormat>HF-{00000}</displayFormat>
        <label>Hedge Fund Party Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hedge Fund Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>